--- a/main.css
+++ b/main.css
@@ -246,7 +246,7 @@ nav a{
   transform: translate(-50%, -50%)
 }
 
-.main3_ul{
+.main3_ul, .main4_ul{
   width: 100%;
   position:absolute;
   left: 50%;
@@ -256,7 +256,7 @@ nav a{
   /* background-color: #3b8fd3b9; */
 }
 
-.main3 ul{
+.main3 ul, .main4 ul{
   display: flex;
   list-style: none;
   justify-content: space-between;
@@ -304,3 +304,54 @@ nav a{
   background-color: #7c7c7c;
 }
 /* -------------------------------------------------------------------------------------------------- */
+.main4{
+  width: 100%;
+  height: 850px;
+  background-color: #f5f5f5;
+  position: relative;
+}
+
+.main4_centents{
+  width: 100%;
+  height: 730px;
+  /* background-color: aquamarine; */
+}
+
+.main4 span{
+  font-size: 32px;
+  font-family: 'Nanum Myeongjo', serif;
+
+  position:absolute;
+  left: 50%;
+  top: 20%;
+  transform: translate(-50%, -50%)
+}
+
+.main4_ul{
+  width: 1200px;
+}
+.main4_ul ul{
+  display: flex;
+  list-style: none;
+}
+
+.main4_imgBox{
+  width: 380px;
+  height: 420px;
+  /* background-color: #00529598; */
+}
+
+.main4_img{
+  width: 380px;
+  height: 380px;
+}
+
+.main4_logoBox{
+  width:100%;
+  height: 23px;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  /* background-color: #37950081; */
+}
+
